<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="iset.pidev.smartbookstore.ui.Categorie.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_home" />

    <activity
        android:id="@+id/nav_gallery"
        android:name="iset.pidev.smartbookstore.ui.Categorie.MainActivity"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_main2" />

    <activity
        android:id="@+id/nav_slideshow"
        android:name="iset.pidev.smartbookstore.View.MainActivity"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>