<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Categorie.liste3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/les_evennements"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/LightCoral"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:background="@drawable/d" />

      <TextView
          android:layout_width="wrap_content"
          android:textSize="16dp"
          android:layout_marginLeft="7dp"
          android:layout_marginRight="7dp"
          android:layout_marginBottom="7dp"
          android:layout_marginTop="7dp"
          android:text="@string/camping"
          android:layout_height="match_parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com1"
            android:hint="Avis"/>
<View
    android:layout_width="match_parent"
    android:elevation="33dp"
    android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:background="@drawable/buggs" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="7dp"
           android:layout_marginRight="7dp"
           android:layout_marginBottom="7dp"
           android:layout_marginTop="7dp"
           android:textSize="16dp"
           android:text="@string/buggs"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Avis"
            android:id="@+id/com2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/velo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:textSize="16dp"

            android:layout_marginTop="7dp"
            android:text="@string/velo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com3"
            android:hint="Avis"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/padle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/paddle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com4"
            android:hint="Avis"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/taylrolinne" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:textSize="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/taylo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com5"
            android:hint="Avis"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/sousmarine" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:textSize="16dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/plangee"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com6"
            android:hint="Avis"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/golf" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:textSize="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/golf"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/com7"
            android:hint="Avis"/>



    </LinearLayout>


</ScrollView>